# weather-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  example.env  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: build.yml  deploy.disabled  deploy.yaml
docker/: Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
src/: bot.py  config.py  container.py  discord_messages.py  dto_yr_data_complete.py  messages.py  models.py  startup.py  time_utils.py  utils.py  weather_client.py  weather_monitor.py  weather_service.py
src/cogs/: rainy_forecast.py
src/dtos/: yr_compact_response.example.json  yr_complete_response.example.json  yr_complete_response.py
